@@ -14,11 +14,10 @@ import ca.uhn.fhir.parser.IParser;
 import com.codahale.metrics.MetricRegistry;
 import com.codahale.metrics.Timer;
 import gov.cms.bfd.data.fda.lookup.FdaDrugCodeDisplayLookup;
-import gov.cms.bfd.data.npi.dto.NPIData;
-import gov.cms.bfd.data.npi.lookup.NPIOrgLookup;
 import gov.cms.bfd.model.codebook.data.CcwCodebookVariable;
 import gov.cms.bfd.model.rif.entities.DMEClaim;
 import gov.cms.bfd.model.rif.entities.DMEClaimLine;
+import gov.cms.bfd.model.rif.npi_fda.NPIData;
 import gov.cms.bfd.model.rif.samples.StaticRifResourceGroup;
 import gov.cms.bfd.server.war.ServerTestUtils;
 import gov.cms.bfd.server.war.commons.CCWUtils;
@@ -90,9 +89,6 @@ public final class DMEClaimTransformerV2Test {
   /** The metrics timer context. Used for determining the timer was stopped. */
   @Mock Timer.Context metricsTimerContext;
 
-  /** The NPI Org lookup. */
-  @Mock NPIOrgLookup mockNpiOrgLookup;
-
   /** The SamhsaSecurityTag lookup. */
   @Mock SecurityTagManager securityTagManager;
 
@@ -135,13 +131,13 @@ public final class DMEClaimTransformerV2Test {
     when(metricRegistry.timer(any())).thenReturn(metricsTimer);
     when(metricsTimer.time()).thenReturn(metricsTimerContext);
     FdaDrugCodeDisplayLookup fdaDrugCodeDisplayLookup = RDATestUtils.fdaFakeDrugCodeDisplayLookup();
-    when(mockNpiOrgLookup.retrieveNPIOrgDisplay(any())).thenReturn(Optional.of(npiData));
     dmeClaimTransformer =
         new DMEClaimTransformerV2(
-            metricRegistry, fdaDrugCodeDisplayLookup, mockNpiOrgLookup, securityTagManager, false);
+            metricRegistry, fdaDrugCodeDisplayLookup, securityTagManager, false);
     claim = generateClaim();
     ExplanationOfBenefit genEob =
         dmeClaimTransformer.transform(new ClaimWithSecurityTags<>(claim, securityTags), false);
+      TransformerUtilsV2.enrichEob(genEob, RDATestUtils.createTestNpiOrgLookup());
     IParser parser = fhirContext.newJsonParser();
     String json = parser.encodeResourceToString(genEob);
     eob = parser.parseResource(ExplanationOfBenefit.class, json);
@@ -276,8 +272,9 @@ public final class DMEClaimTransformerV2Test {
         "http://nucc.org/provider-taxonomy",
         member2.getQualification().getCoding().getFirst().getSystem());
     assertEquals(
-        "Orthopaedic Surgery", member2.getQualification().getCoding().getFirst().getDisplay());
-    assertEquals("207X00000X", member2.getQualification().getCoding().get(0).getCode());
+        "Hematology (Pathology) Physician",
+        member2.getQualification().getCoding().getFirst().getDisplay());
+    assertEquals("207ZH0000X", member2.getQualification().getCoding().get(0).getCode());
 
     assertEquals(2, eob.getCareTeam().size());
   }
@@ -310,6 +307,7 @@ public final class DMEClaimTransformerV2Test {
         dmeClaimTransformer.transform(
             new ClaimWithSecurityTags<>(loadedClaim, securityTags), false);
 
+      TransformerUtilsV2.enrichEob(genEob, RDATestUtils.createTestNpiOrgLookup());
     // Ensure the extension for PRTCPTNG_IND_CD wasnt added
     // Also the qualification coding should be empty if specialty code is not set
     String prtIndCdUrl =
